[gd_scene load_steps=11 format=3 uid="uid://11cjy4c7lka1"]

[ext_resource type="Texture2D" uid="uid://drr6432mplqgx" path="res://assets/updated city background layer 3.png" id="1_hdxv2"]
[ext_resource type="Script" path="res://scenes/main_menu_fixed.gd" id="1_qro37"]
[ext_resource type="Texture2D" uid="uid://d2tktuwf015jk" path="res://assets/updated city background layer 2.png" id="2_av8pe"]
[ext_resource type="Texture2D" uid="uid://ma5evocqcvw0" path="res://assets/updated city background layer 1.png" id="3_4jr1y"]
[ext_resource type="Texture2D" uid="uid://cnm4leov8dvwi" path="res://assets/Yuiitsu.png" id="5_54s0r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jijru"]
texture = ExtResource("1_hdxv2")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gwq8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdujq"]
bg_color = Color(0.609719, 0.740152, 0.783831, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifd6t"]
bg_color = Color(0.426339, 0.56804, 0.613233, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iugv"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="MainMenuFixed" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qro37")

[node name="main_background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jijru")

[node name="background_buildings_1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_av8pe")
expand_mode = 1

[node name="background_buldings_2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4jr1y")
expand_mode = 1

[node name="title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -89.0
offset_right = 4.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_54s0r")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = 12.0
offset_right = 259.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_gwq8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_bdujq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ifd6t")
theme_override_styles/normal = SubResource("StyleBoxFlat_3iugv")
text = "Start Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_gwq8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_bdujq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ifd6t")
theme_override_styles/normal = SubResource("StyleBoxFlat_3iugv")
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_gwq8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_bdujq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ifd6t")
theme_override_styles/normal = SubResource("StyleBoxFlat_3iugv")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
